fresh from oven

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ events {
 http {
     server {
         listen 80;
-        server_name localhost;
+        server_name djncloud.my.id;
 
         location / {
             root /usr/share/nginx/html/src;
