--- a/nginx-lb.conf
+++ b/nginx-lb.conf
@@ -11,7 +11,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name djncloud.my.id;
 
         location / {
             proxy_pass http://backend;
